fix(styles): fix docs content spacing

--- a/src/style.css
+++ b/src/style.css
@@ -72,8 +72,22 @@ main,
   font-style: italic;
 }
 
+#docs {
+  margin: 45px 10px;
+}
+
 #docs h1 {
   text-align: center;
+}
+
+#docs h3 {
+  margin-bottom: 6px;
+}
+
+#docs p {
+  text-align: justify;
+  line-height: 1.5;
+  margin-top: 0;
 }
 
 @media only screen and (min-width: 700px) {
